[package]
name = "aiken-jna-wrapper"
version = "0.6.0"
authors = ["satran004", "matiwinnetou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#aiken = "1.0.31-alpha"
uplc = "1.0.31-alpha"
aiken-lang = "1.0.31-alpha"

pallas-addresses = "0.30.1"
pallas-codec = { version = "0.30.1", features = ["num-bigint"] }
pallas-crypto = "0.30.1"
pallas-primitives = "0.30.1"
pallas-traverse = "0.30.1"

ffi-support = "0.4.4"
jni = "0.20.0"
hex = "0.4.3"

minicbor = "0.19.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.127" }
anyhow = "1.0.75"

