[package]
name = "aiken-jna-wrapper"
version = "0.7.0"
edition = "2021"
authors = ["satran004", "matiwinnetou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
uplc = "1.1.13"
aiken-lang = "1.1.13"

pallas-addresses = "0.32.0"
pallas-codec = { version = "0.32.0", features = ["num-bigint"] }
pallas-crypto = "0.32.0"
pallas-primitives = "0.32.0"
pallas-traverse = "0.32.0"

ffi-support = "0.4.4"
jni = "0.21.1"
hex = "0.4.3"

minicbor = "0.25.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
anyhow = "1.0.89"
